--- a/index.html
+++ b/index.html
@@ -19,3 +19,7 @@
     
 </body>
 </html>
+
+//https://eladams87.cartodb.com/viz/c194f1fa-a422-11e5-9bfe-0e787de82d45/public_map
+//lab 9 map
+//lab 8 map
