header and finalize map choice

--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
 </head>
 
 <body>
-
-    <p>Hello World! I’m going to be a portfolio page.</p>
-    
+  <header>
+    <h1>Elizabeth Adams</h1>
+    <h2>describe</h2>  
+      <p>Hello World! I’m going to be a portfolio page.</p>
+    </header>
 </body>
 </html>
 
-//https://eladams87.cartodb.com/viz/c194f1fa-a422-11e5-9bfe-0e787de82d45/public_map
+//lab 2 or 3
+//lab 8 - https://eladams87.cartodb.com/viz/625141e0-96fc-11e5-a761-0ecfd53eb7d3/public_map
 //lab 9 map
 //lab 8 map
