--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@ h3{
 }
 p { 
         font-size: .9em; 
-        color: #428bca; 
+        color: #204c39; 
 }
 ul {
         list-style-type: none; 
         font-size: .9em; 
-        color: #428bca; 
+        color: #204c39; 
         line-height: 1.6em;
 }
 a, a:visited {   
