fix gh-pages and add to index.html

--- a/index.html
+++ b/index.html
@@ -134,23 +134,23 @@ a, a:visited {
 </section>   
       
 <section  class="project">
-    <a href="Maps/Natural-Power.html" target="_blank"><img src="Images/BioSolar.JPG" alt="Biomass and Solar Facilites" class="project-image"></a>
-    <a href="Maps/Natural-Power.html" target="_blank"><h3>Biomass and Solar Power Plants</h3></a>
+    <a href="http://eladam1900.github.io/Bio-Solar-Facilities/" target="_blank"><img src="Images/BioSolar.JPG" alt="Biomass and Solar Facilites" class="project-image"></a>
+    <a href="http://eladam1900.github.io/Bio-Solar-Facilities/" target="_blank"><h3>Biomass and Solar Power Plants</h3></a>
     <p>A map of available locations of biomass and solar energy plants across the US sorted by MW capacities.</p>
     <p>Each feature highlights as users hover across them, and more speciic plant information is availble via popups.</p>
     <ul>
-        <li>See the map: <a href="Maps/Natural-Power.html" target="_blank">Biomass and Solar Power Plants</a></li>
+        <li>See the map: <a href="http://eladam1900.github.io/Bio-Solar-Facilities/" target="_blank">Biomass and Solar Power Plants</a></li>
         <li>Data Source: <a href="http://www.eia.gov/electricity/data/eia923/" target="_blank">U.S. Energy Information Administration</a></li>
     </ul>
 </section>  
       
 <section  class="project">
-    <a href="Maps/Elemental-Power.html" target="_blank"><img src="Images/HighlightWithPop.JPG" alt="Nuclear, Solar, and Wind Facilites" class="project-image"></a>
-    <a href="Maps/Elemental-Power.html" target="_blank"><h3>Nuclear, Solar, and Wind Power Plants</h3></a>
+    <a href="http://eladam1900.github.io/Nuc-win-solar-Facilities/" target="_blank"><img src="Images/HighlightWithPop.JPG" alt="Nuclear, Solar, and Wind Facilites" class="project-image"></a>
+    <a href="http://eladam1900.github.io/Nuc-win-solar-Facilities/" target="_blank"><h3>Nuclear, Solar, and Wind Power Plants</h3></a>
     <p>A map of nuclear, solar, and wind energy plants across the US sorted by MW capacities.</p>
     <p>A 500 km radius and coorelating spotlight can be enacted by clicking on the map, and more speciic plant information is availble via popups.</p>
     <ul>
-        <li>See the map: <a href="Maps/Elemental-Power.html" target="_blank">Nuclear, Solar, and Wind Power Plants</a></li>
+        <li>See the map: <a href="http://eladam1900.github.io/Nuc-win-solar-Facilities/" target="_blank">Nuclear, Solar, and Wind Power Plants</a></li>
         <li>Data Source: <a href="http://www.eia.gov/electricity/data/eia923/" target="_blank">U.S. Energy Information Administration</a></li>
     </ul>
 </section>  
