--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         width: 100%;
         min-width: 800px;
         margin: 0 auto;
-        background: #5cb85c;
+        background: #428bca;
         padding: 15px 0 20px;
     }
   
@@ -77,7 +77,7 @@ a, a:visited {
     background: white;
     float: left;
     margin-right: 20px;
-    border: 2px solid #dddddd;
+    border: 2px solid #363333;
 }
 
 </style>
@@ -166,12 +166,12 @@ a, a:visited {
 </section> 
 
 <section  class="project">
-    <a href="Maps/2010PopulationDensity.pdf" target="_blank"><img src="Images/KYHomeVacancies.JPG" alt="US Population Density" class="project-image"></a>
-    <a href="Maps/2010PopulationDensity.pdf" target="_blank"><h3>US Population Density</h3></a>
-    <p>A simple map of the US population density in 2010.</p>
-    <p>Density is detemined by the people per a sqaure mile, per county.</p>
+    <a href="https://eladam1900.github.io/KY-Vacancies/" target="_blank"><img src="Images/KYHomeVacancies.JPG" alt="Kentucky Vacancy Rates" class="project-image"></a>
+    <a href="https://eladam1900.github.io/KY-Vacancies/" target="_blank"><h3>Kentucky Vacancy Rates</h3></a>
+    <p></p>
+    <p></p>
     <ul>
-        <li>See the map: <a href="Maps/2010PopulationDensity.pdf" target="_blank">2010 US Population Density</a></li>
+        <li>See the map: <a href="https://eladam1900.github.io/KY-Vacancies/" target="_blank">Kentucky Vacancy Rates</a></li>
         <li>Data Source: <a href="https://www.census.gov/geo/maps-data/data/tiger.html" target="_blank">2010 US Census Bureau</a></li>
     </ul>
 </section>  
