update color scheme, add esri maps and map673 details

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>MAP672 Portfolio Example</title>
+<title>Mapping Portfolio </title>
 
 <meta name=‘viewport’ content=‘initial-scale=1,maximum-scale=1,user-scalable=no’ />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" />
@@ -18,7 +18,7 @@
         width: 100%;
         min-width: 800px;
         margin: 0 auto;
-        background: #428bca;
+        background: #509186;
         padding: 15px 0 20px;
     }
   
@@ -45,7 +45,7 @@ h2{
     
 h3{
         font-size: 28px;
-        color: #428bca;
+        color: #0d3d71;
 }
 p { 
         font-size: .9em; 
@@ -58,7 +58,7 @@ ul {
         line-height: 1.6em;
 }
 a, a:visited {   
-        color: #428bca;
+        color: #0d3d71;
 }
 .project {
     width: 80%;
@@ -86,7 +86,7 @@ a, a:visited {
 <body>
   <header>
     <h1>Elizabeth Adams</h1>
-    <h2>Still Needs Work</h2>  
+    <h2>Migration from Esri to Open Source</h2>  
   </header>   
  <section class="project">
     <a href="https://eladams87.cartodb.com/viz/625141e0-96fc-11e5-a761-0ecfd53eb7d3/map" target="_blank"><img src="Images/MortalityRates.JPG" alt="Mortality Rates" class="project-image"></a>
@@ -135,11 +135,11 @@ a, a:visited {
 <section  class="project">
     <a href="https://eladam1900.github.io/KY-Unemployment-Rate/" target="_blank"><img src="Images/KYUnemploymentRate.JPG" alt="Kentucky's Unemployment Rate" class="project-image"></a>
     <a href="https://eladam1900.github.io/KY-Unemployment-Rate/" target="_blank"><h3>Kentucky's Unemployment Rate</h3></a>
-    <p></p>
-    <p></p>
+    <p>A map of Kentucky's unemployment rate's from 2000 to 2013</p>
+    <p>Data is disseminated by county and year via a timeslider, pop up and infowindow.</p>
     <ul>
         <li>See the map: <a href="https://eladam1900.github.io/KY-Unemployment-Rate/" target="_blank">Kentucky's Unemployment Rate</a></li>
-        <li>Data Source: <a href="https://www.census.gov/geo/maps-data/data/tiger.html" target="_blank">2010 US Census Bureau</a></li>
+        <li>Data Source: <a href="http://www.bls.gov/eag/eag.ky.htm" target="_blank">Bureau of Labor Statistics</a></li>
     </ul>
 </section>  
 
@@ -168,11 +168,35 @@ a, a:visited {
 <section  class="project">
     <a href="https://eladam1900.github.io/KY-Vacancies/" target="_blank"><img src="Images/KYHomeVacancies.JPG" alt="Kentucky Vacancy Rates" class="project-image"></a>
     <a href="https://eladam1900.github.io/KY-Vacancies/" target="_blank"><h3>Kentucky Vacancy Rates</h3></a>
-    <p></p>
-    <p></p>
+    <p>A break down of Kentucky's housing vacancies rates by county.</p>
+    <p>Includes a query of the various vacancy and sold categories.</p>
     <ul>
         <li>See the map: <a href="https://eladam1900.github.io/KY-Vacancies/" target="_blank">Kentucky Vacancy Rates</a></li>
-        <li>Data Source: <a href="https://www.census.gov/geo/maps-data/data/tiger.html" target="_blank">2010 US Census Bureau</a></li>
+        <li>Data Source: <a href="http://www.census.gov/programs-surveys/acs/" target="_blank">US Census Bureau</a></li>
+    </ul>
+</section>  
+
+<header><h2>Esri Maps</h2></header>
+
+<section  class="project">
+    <a href="http://kgs.uky.edu/arches/" target="_blank"><img src="Images/Arches.JPG" alt="Kentucky's Arches" class="project-image"></a>
+    <a href="http://kgs.uky.edu/arches/" target="_blank"><h3>Kentucky's Arches</h3></a>
+    <p>Pictures and information about all of the public recorded arches in the state of Kentucky.</p>
+    <p>Users can search for arches via the list, or click on the arches for detailed information and archived pictures.</p>
+    <ul>
+        <li>See the map: <a href="http://kgs.uky.edu/arches/" target="_blank">Kentucky's Arches</a></li>
+        <li>Data Source: <a href="http://www.uky.edu/kgs" target="_blank">Kentucky Geological Survey (KGS)</a></li>
+    </ul>
+</section>  
+
+<section  class="project">
+    <a href="http://kgs.uky.edu/kgsmap/ogpermits/" target="_blank"><img src="Images/ogpermits.jpg" alt="Permitted Wells" class="project-image"></a>
+    <a href="http://kgs.uky.edu/kgsmap/ogpermits/" target="_blank"><h3>Permitted Wells Timeline</h3></a>
+    <p>Kentucky oil and gas wells displayed according to their permitted date.</p>
+    <p>Users can query wells by TD formation, well result, and bore type.</p>
+    <ul>
+        <li>See the map: <a href="http://kgs.uky.edu/kgsmap/ogpermits/" target="_blank">Permitted Wells Timeline</a></li>
+        <li>Data Source: <a href="http://www.uky.edu.kgs" target="_blank">Kentucky Geological Survey (KGS)</a></li>
     </ul>
 </section>  
 </body>
